--- a/CSS/main.css
+++ b/CSS/main.css
@@ -8,7 +8,7 @@
     margin-top: 20px;
     margin-left: 150px;
     border-radius: 25px;
-    height: 1300px;
+    height: 1430px;
     width: 980px;
     margin-bottom: 50px;
     background-color: #68bbe3;
@@ -31,7 +31,7 @@
 .blog-paragraph {
     font-size: 20px;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    margin: 25px;
+    margin: 05px;
     background-color: #003060;
     color: #ffffff;
     border-radius: 5px;
@@ -85,11 +85,15 @@ video {
     width: 220px;
     height: 360px;
     background-color: #003060;
-    border: 1px solid  #ffffff;
     margin: 20px;
     box-shadow: 20px rgba(179, 27, 27, 0.2);
     transition: 0.3s;
     border-radius: 15px;
+    border-radius: 15px;
+background: #003060;
+box-shadow: inset 8px 8px 12px #001326,
+            inset -8px -8px 12px #004d9a;
+
   }
   
   .player-card:hover {
@@ -104,6 +108,13 @@ video {
     margin-top: 20px;
     background-color: #68bbe3;
     border-radius: 50%;
+    border-radius: 50%;
+    background: linear-gradient(145deg, #002b56, #003367);
+    box-shadow:  6px 6px 12px #001326,
+                 -6px -6px 12px #004d9a;
+  }
+  .player-image:hover {
+    background-color: black;
   }
   
   .player-name {
@@ -127,6 +138,86 @@ video {
   .font {
     font-family: "Nova Mono",sans-serif;
   }
+
+
+/* Styling vote-card*/
+.vote-frame {
+  display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+.vote-headers {
+  font-size: 24px;
+  text-align: center;
+    margin: 20px;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+  color: aliceblue;
+
+}
+
+.vote-card {
+  display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+    width: 220px;
+    height: 460px;
+    background-color: #003060;
+    margin: 20px;
+    box-shadow: 20px rgba(179, 27, 27, 0.2);
+    transition: 0.3s;
+    border-radius: 15px;
+  position: relative;
+  border-radius: 15px;
+background: #003060;
+box-shadow: inset 8px 8px 12px #001326,
+            inset -8px -8px 12px #004d9a;
+}
+
+.vote-btn {
+  border-radius: 15px;
+  width: 90px;
+  background-color: rgb(161, 44, 44);
+  border: #003060;
+  font-size: 18px;
+  font-weight: bolder;
+  color: #92acc2;
+background: #003060;
+box-shadow: inset 5px 5px 10px #001326,
+            inset -5px -5px 10px #004d9a;
+}
+.vote-btn:hover {
+  border-radius: 15px;
+background: #004d9a;
+box-shadow: inset 5px 5px 10px #001f3e,
+            inset -5px -5px 10px #007bf6;
+}
+
+.tally {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  background-color: #a01717;
+  height: 40px;
+  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-family: 'Nova Mono',sans-serif;
+  color: #92acc2;
+  border-radius: 50%;
+  background: linear-gradient(145deg, #002b56, #003367);
+  box-shadow:  6px 6px 12px #001326,
+             -6px -6px 12px #004d9a;
+}
+.tally:hover {
+  background-color: #68bbe3;
+}
+
   
 
 
