--- a/CSS/header.css
+++ b/CSS/header.css
@@ -23,7 +23,7 @@ box-shadow:  12px 12px 24px #001326,
   .brand {
     font-weight: bold;
     text-decoration: none;
-    color: #ffffff;
+    color: #d4e6f5;
     font-family: "Nova Mono", sans-serif;
   }
   
@@ -41,7 +41,7 @@ box-shadow:  12px 12px 24px #001326,
   
   nav a {
     text-decoration: none;
-    color: #ffffff;
+    color: #d4e6f5;
     font-family: "Nova Mono", sans-serif;
   }
   
@@ -62,7 +62,7 @@ box-shadow:  12px 12px 24px #001326,
     border: none;
     border-radius: 5px;
     background-color: #0e86d4;
-    color: #fff;
+    color: #d4e6f5;
     margin-left: 10px;
   }
 
@@ -71,8 +71,20 @@ box-shadow:  12px 12px 24px #001326,
   }
 
   a:hover {
-    color: #000000;
+    color: #0e86d4;
   }
   
+  /* Styling login link*/
+  .login-btn {
+    color: #d4e6f5;
+    background-color: #003060;
+    border: #003060;
+    font-size: 15px;
+    font-weight: bold;
+  }
+  .login-btn:hover {
+    color: #68bbe3;
+    background-color: #003060;
+  }
 
 
