--- a/CSS/main.css
+++ b/CSS/main.css
@@ -3,8 +3,8 @@
 
 /* Styling the blog-card*/
 .blog-card {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
     margin-top: 20px;
     margin-left: 150px;
     border-radius: 25px;
@@ -33,7 +33,7 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin: 05px;
     background-color: #003060;
-    color: #ffffff;
+    color: #d4e6f5;
     border-radius: 5px;
 }
 
@@ -68,7 +68,7 @@ video {
     font-family: 'Nova Mono', sans-serif;
     display: flex;
     justify-content: center;
-    color: aliceblue;
+    color: #d4e6f5;
 }
 
 .frame {
@@ -106,8 +106,6 @@ box-shadow: inset 8px 8px 12px #001326,
     display: flex;
     justify-self: center;
     margin-top: 20px;
-    background-color: #68bbe3;
-    border-radius: 50%;
     border-radius: 50%;
     background: linear-gradient(145deg, #002b56, #003367);
     box-shadow:  6px 6px 12px #001326,
@@ -121,7 +119,7 @@ box-shadow: inset 8px 8px 12px #001326,
     text-align: center;
     margin: -20px;
     margin-top: -10px;
-    color: aliceblue;
+    color:#d4e6f5;
   }
   
   .player-age,
@@ -131,8 +129,8 @@ box-shadow: inset 8px 8px 12px #001326,
     font-size: 16px;
     margin-top: -10px;
     margin-bottom: -10px;
-    margin-left: 5px;
-    color: aliceblue;
+    margin-left: 15px;
+    color: #d4e6f5;
   }
   
   .font {
@@ -155,7 +153,7 @@ box-shadow: inset 8px 8px 12px #001326,
     margin-top: 10px;
     margin-left: 10px;
     margin-right: 10px;
-  color: aliceblue;
+  color: #d4e6f5;
 
 }
 
@@ -178,37 +176,38 @@ box-shadow: inset 8px 8px 12px #001326,
 }
 
 .vote-btn {
-  border-radius: 15px;
   width: 90px;
+  margin-left: 15px;
+  margin-bottom: 15px;
   background-color: rgb(161, 44, 44);
   border: #003060;
   font-size: 18px;
   font-weight: bolder;
-  color: #92acc2;
-background: #003060;
-box-shadow: inset 5px 5px 10px #001326,
-            inset -5px -5px 10px #004d9a;
+  color: #d4e6f5;
+  border-radius: 15px;
+background: linear-gradient(145deg, #003367, #002b56);
+box-shadow:  6px 6px 12px #001326,
+             -6px -6px 12px #004d9a;
 }
 .vote-btn:hover {
   border-radius: 15px;
-background: #004d9a;
-box-shadow: inset 5px 5px 10px #001f3e,
-            inset -5px -5px 10px #007bf6;
+background: linear-gradient(145deg, #0052a5, #00458b);
+box-shadow:  6px 6px 12px #001f3e,
+             -6px -6px 12px #007bf6;
 }
 
 .tally {
   position: absolute;
-  bottom: 5px;
-  right: 5px;
-  background-color: #a01717;
-  height: 40px;
-  width: 40px;
+  bottom: 15px;
+  right: 15px;
+  height: 45px;
+  width: 45px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 20px;
   font-family: 'Nova Mono',sans-serif;
-  color: #92acc2;
+  color: #d4e6f5;
   border-radius: 50%;
   background: linear-gradient(145deg, #002b56, #003367);
   box-shadow:  6px 6px 12px #001326,
@@ -219,7 +218,72 @@ box-shadow: inset 5px 5px 10px #001f3e,
 }
 
   
+/* Styling login form */
 
+.login-div {
+  margin-left: 500px;
+  margin-top: 75px;
+  height: 500px;
+  width: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 25px;
+background: #003060;
+box-shadow: inset 8px 8px 16px #001326,
+            inset -8px -8px 16px #004d9a;
+}
+.login-form {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  
+}
+.login-p {
+  margin-bottom: -6px;
+  margin-left: -120px;
+  font-weight: bold;
+  font-size: 18px;
+  color: #d4e6f5;
 
+}
+.login-input {
+  width: 250px;
+  height: 25px;
+  font-size: 17px;
+  color: #d4e6f5;
+  border-radius: 10px;
+background: linear-gradient(145deg, #003367, #002b56);
+box-shadow:  9px 9px 18px #001326,
+             -9px -9px 18px #004d9a;
+}
+.login-input:hover {
+  border-radius: 10px;
+background: linear-gradient(145deg, #003367, #002b56);
+box-shadow:  9px 9px 18px #001326,
+             -9px -9px 18px #004d9a;
+}
+.login {
+  margin-top: 20px;
+  height: 30px;
+  width: 80px;
+  font-size: 17px;
+  border: #003060;
+  color: #d4e6f5;
+  border-radius: 10px;
+background: linear-gradient(145deg, #003367, #002b56);
+box-shadow:  9px 9px 18px #001326,
+             -9px -9px 18px #004d9a;
+}
+.login:hover {
+  border-radius: 10px;
+background: linear-gradient(145deg, #0f8fe3, #0d79bf);
+box-shadow:  9px 9px 18px #063655,
+             -9px -9px 18px #16d6ff;
+}
+h1 {
+  margin-top: -25px;
+  color: #d4e6f5;
+}
 
 
