--- a/CSS/main.css
+++ b/CSS/main.css
@@ -287,3 +287,35 @@ h1 {
 }
 
 
+/* Styling Search-div*/
+.search-frame {
+  display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 30px;
+}
+.search-card {
+  display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+    width: 220px;
+    height: 360px;
+    background-color: #003060;
+    margin: 20px;
+    box-shadow: 20px rgba(179, 27, 27, 0.2);
+    transition: 0.3s;
+    border-radius: 15px;
+    border-radius: 15px;
+background: #003060;
+box-shadow: inset 8px 8px 12px #001326,
+            inset -8px -8px 12px #004d9a;
+
+}
+.search-header {
+  margin-left: 40px;
+  font-size: 30px;
+  display: flex;
+  align-items: center;
+  color: #d4e6f5;
+  
+}
