--- a/CSS/header.css
+++ b/CSS/header.css
@@ -22,6 +22,7 @@ box-shadow:  12px 12px 24px #001326,
   /* Brand name styles */
   .brand {
     font-weight: bold;
+    font-size: 18px;
     text-decoration: none;
     color: #d4e6f5;
     font-family: "Nova Mono", sans-serif;
@@ -51,13 +52,14 @@ box-shadow:  12px 12px 24px #001326,
     align-items: center;
   }
   
-  input[type="text"] {
+  .input {
     padding: 0.5em;
     border: none;
     border-radius: 10px;
+    background-color: #d4e6f5;
   }
   
-  button[type="submit"] {
+  .button {
     padding: 0.5em;
     border: none;
     border-radius: 5px;
@@ -67,7 +69,7 @@ box-shadow:  12px 12px 24px #001326,
   }
 
   button:hover{
-    background-color: #000000;
+    background-color: #004d9a;
   }
 
   a:hover {
