--- a/CSS/main.css
+++ b/CSS/main.css
@@ -52,24 +52,26 @@ box-shadow:  9px 9px 18px #001326,
     display: flex;
     flex-direction: column;
     margin-top: 20px;
-    margin-left: 150px;
-    height: 58vh;
-    width: 75vw;
+    margin-left: 180px;
+    height: 80vh;
+    width: 70vw;
     border-radius: 25px;
 background: #003060;
 box-shadow: inset 9px 9px 18px #001326,
             inset -9px -9px 18px #004d9a;
 }
 video {
-    height: auto;
-    width: auto;
+    height: 75vh;
+    width: 70vw;
     border-radius: 25px;
     margin-top: -12px;
 }
 
 /* Styling the player-card*/
 .players-list {
-    list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .list {
@@ -294,7 +296,7 @@ box-shadow:  9px 9px 18px #063655,
              -9px -9px 18px #16d6ff;
 }
 h1 {
-  margin-top: -25px;
+  margin-top: 35px;
   color: #d4e6f5;
 }
 
