--- a/CSS/header.css
+++ b/CSS/header.css
@@ -21,6 +21,7 @@ nav {
   
 /* Brand name styles */
 .brand {
+  cursor: pointer;
   font-weight: bold;
   font-size: 18px;
   text-decoration: none;
